--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -431,7 +431,8 @@ p {
             .box-text {
                 P {
                     font-size: 2rem;
-                   color: #000000;
+                    color: #000000;
+                    margin-top: 1.5rem;
                 }
                 a{
                     font-size: 1.8rem;
