--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -471,6 +471,7 @@ p {
 .project-section .project-row .project-box .box-text P {
   font-size: 2rem;
   color: #000000;
+  margin-top: 1.5rem;
 }
 
 .project-section .project-row .project-box .box-text a {
